@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-24T01:25:03Z",
+  "timestamp" : "2023-07-24T16:20:24Z",
   "count_outdated" : 700,
   "uniques_outdated" : 397,
-  "count" : 744,
+  "count" : 745,
   "uniques" : 426,
   "clones" : [
     {
       "timestamp": "2023-07-10T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 8, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 8,
-      "uniques_minmax": [ 6, 8 ],
-      "uniques_decinc": [ 0, 8 ]
+      "count": 1,
+      "count_minmax": [ 1, 11 ],
+      "count_decinc": [ 10, 11 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 8 ],
+      "uniques_decinc": [ 7, 8 ]
     },
     {
       "timestamp": "2023-07-11T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
