@@ -1,3 +1,12 @@
+2023-07-24T16:20:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5647303791 # 1053
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-24
+* notice: last 14d: unq all: 4 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 700 / 426 744
+* notice: next accum: outdated-unq outdated-all / unq all: 397 700 / 426 745
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -7 -10 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-07-10 2023-07-24]
+
 2023-07-24T01:25:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5639757464 # 1051
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-24
